--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,13 +47,6 @@ jobs:
       image: amd64/rust
     steps:
       - uses: actions/checkout@v4
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          # these represent dependencies downloaded by cargo
-#          # and thus do not depend on the OS, arch nor rust version.
-#          path: ~/.cargo
-#          key: cargo-cache-
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -88,8 +81,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cargo
-            ./target
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            ./target/
           # this key equals the ones on `linux-build-lib` for re-use
           key: cargo-cache-linux-${{ hashFiles('datafusion/**/Cargo.toml') }}
       - name: Setup Rust toolchain
@@ -111,14 +107,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Cache Cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo
-            ./datafusion-cli/target
-          # this key equals the ones on `linux-build-lib` for re-use
-          key: cargo-cache-cli-${{ hashFiles('datafusion-cli/Cargo.lock') }}
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -215,12 +203,6 @@ jobs:
       image: amd64/rust
     steps:
       - uses: actions/checkout@v4
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: ~.cargo
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -246,8 +228,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cargo
-            ./target
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            ./target/
           # this key equals the ones on `linux-build-lib` for re-use
           key: cargo-cache-benchmark-${{ hashFiles('datafusion/**/Cargo.toml') }}
       - name: Setup Rust toolchain
@@ -312,8 +297,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cargo
-            ./target
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            ./target/
           key: cargo-cache-win64-${{ hashFiles('datafusion/**/Cargo.toml') }}
       - name: Install protobuf compiler
         shell: bash
@@ -351,13 +339,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/.cargo
-#            ./target
-#          key: cargo-cache-mac-${{ hashFiles('datafusion/**/Cargo.toml') }}
       - name: Install protobuf compiler
         shell: bash
         run: |
@@ -397,12 +378,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: /github/home/.cargo
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
@@ -500,12 +475,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: ~/.cargo
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -526,14 +495,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/.cargo
-#            ./target
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-linux-${{ hashFiles('datafusion/**/Cargo.toml') }}
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -553,12 +514,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: /github/home/.cargo
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -585,12 +540,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-#      - name: Cache Cargo
-#        uses: actions/cache@v3
-#        with:
-#          path: /github/home/.cargo
-#          # this key equals the ones on `linux-build-lib` for re-use
-#          key: cargo-cache-
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
