--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -226,17 +226,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Cache Cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            ./target/
-          # this key equals the ones on `linux-build-lib` for re-use
-          key: cargo-cache-benchmark-${{ hashFiles('datafusion/**/Cargo.toml', 'benchmarks/Cargo.toml') }}
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
@@ -253,6 +242,35 @@ jobs:
         run: |
           export TPCH_DATA=`realpath datafusion/sqllogictest/test_files/tpch/data`
           cargo test serde_q --profile release-nonlto --features=ci -- --test-threads=1
+      - name: Verify Working Directory Clean
+        run: git diff --exit-code
+
+  # verify that the benchmark queries return the correct results
+  sqllogictest-with-tpch:
+    name: Run sqllogictest with TPC-H data (amd64)
+    needs: [ linux-build-lib ]
+    runs-on: ubuntu-latest
+    container:
+      image: amd64/rust
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+        with:
+          rust-version: stable
+      - name: Generate benchmark data and expected query results
+        run: |
+          mkdir -p datafusion/sqllogictest/test_files/tpch/data
+          git clone https://github.com/databricks/tpch-dbgen.git
+          cd tpch-dbgen
+          make
+          ./dbgen -f -s 0.1
+          mv *.tbl ../datafusion/sqllogictest/test_files/tpch/data
+      - name: Verify that benchmark queries return expected results
+        run: |
+          export TPCH_DATA=`realpath datafusion/sqllogictest/test_files/tpch/data`
           INCLUDE_TPCH=true cargo test --test sqllogictests
       - name: Verify Working Directory Clean
         run: git diff --exit-code
